# DifferentialGeometryStudy

./: README.md
wasm/: Cargo.toml
wasm/src/: app.rs  curve_tessellation.rs  domain.rs  frenet_frame.rs  lib.rs  log.rs  plane.rs  surface_tessellation.rs  types.rs
wasm/src/curves/: arc_curve.rs  clothoid_curve.rs  curve.rs  ellipse_arc_curve.rs  expression_curve.rs  mod.rs  parametric_curve.rs
wasm/src/optimizer/: df.rs  mod.rs  optimizer.rs
wasm/src/surfaces/: cylinder.rs  elliptic_paraboloid.rs  helicoid.rs  hyperbolic_paraboloid.rs  mobius.rs  mod.rs  single_leaf_paraboloid.rs  sphere.rs  surface.rs  surface_curvature.rs  torus.rs
www/: package.json  tsconfig.json  webpack.config.js
www/src/: App.tsx  Control.tsx  bootstrap.tsx  index.html
www/src/preview/: CurvatureRadiusCircle.tsx  FrenetFrames.tsx  Surface.tsx
